# intuition-plugin

./: README.md  intuition-plugin.cabal  stack.yaml
src/Plugin/: Intuition.hs
src/Plugin/Intuition/: Arg.hs  Context.hs  GHC.hs  KnownNat.hs  TypeLevel.hs
src/Plugin/Intuition/Backend/: Ring.hs  SMT.hs  Simpl.hs
test/: test.hs
test/Test/: Gcd.hs  Nat.hs
