name:                intuition-plugin
version:             0.1.0.0
synopsis:            A GHC plugin for helping type-level programming.
description:         An experiment on applying automated type-level equation reasoning techniques
                     to guiding type normalization of GHC.
homepage:            https://github.com/sighingnow/intuition-plugin#readme
author:              HE, Tao
maintainer:          sighingnow@gmail.com
copyright:           Copyright: (c) 2017 HE, Tao
category:            Development
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
extra-source-files:  README.md
tested-with:         GHC ==8.2.1, GHC ==8.3

library
  hs-source-dirs:      src
  exposed-modules:
    Plugin.Intuition
    Plugin.Intuition.Arg
    Plugin.Intuition.GHC
  other-modules:
    Plugin.Intuition.Backend.Ring
    Plugin.Intuition.Backend.Simpl
    Plugin.Intuition.Backend.SMT
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >= 4.8 && < 5
                     , foundation
                     , ghc
                     , transformers
                     , z3 >= 4.0.0

test-suite test-intuition
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:
    Test.Nat
  default-language:    Haskell2010
  ghc-options:         -fplugin Plugin.Intuition
  build-depends:       base >= 4.8 && < 5
                     , intuition-plugin
